syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.demo.grpc";
option java_outer_classname = "HelloProto";

message HelloRequest {
string name = 1;      // 이름
int32 age = 2;        // 나이
string message = 3;   // 하고 싶은 말 메시지
}

message HelloResponse {
string greeting_message = 1;  // 인사 메시지
string question_message = 2;  // 질문 메시지
}

service Hello { //서비스: 클라이언트 -> 서버 요청 시 호출할 RPC 메소드
rpc SayHello(HelloRequest) returns(HelloResponse);  //Unary RPC (단방향 RPC)
rpc LotsOfReplies(HelloRequest) returns(stream HelloResponse);  //Server Streaming RPC (서버 스트리밍 RPC)
rpc LotsOfGreetings(stream HelloRequest) returns(HelloResponse);  //Client Streaming RPC (클라이언트 스트리밍 RPC)
rpc BidiHello(stream HelloRequest) returns(stream HelloResponse); //Bidirectional streaming RPC (양방향 스트리밍 RPC)
}